--- a/src/main/generated-sources/sarl/fr/utbm/ia51/environment/.gitignore
+++ b/src/main/generated-sources/sarl/fr/utbm/ia51/environment/.gitignore
@@ -1,1 +1,5 @@
 /.Environment.java._trace
+/.Influence.java._trace
+/.Perception.java._trace
+/.RunBeginingOfStep.java._trace
+/.RunEndOfStep.java._trace
